Scrapper. Перенос параметра link из тела в строку запроса DELETE /links
