# scrapper/src/main/java/ru/tinkoff/edu/java/scrapper/application/shared/application/dto/request/RemoveLinkRequest.java
@@ -1,9 +1,0 @@
-package ru.tinkoff.edu.java.scrapper.application.shared.application.dto.request;
-
-/**
- * Принимаемый объект для удаления отслеживаемой ссылки
- *
- * @param link ссылка
- */
-public record RemoveLinkRequest(String link) {
-}
